# NSU_labs_programming_1st

./: README.md
lab0/src/: main.c
lab1-0/src/: main.c
lab1-1/src/: main.c
lab1-2/src/: main.c
lab10/: CMakeLists.txt
lab10/src/: convexHull.c  convexHull.h  main.c
lab11/: CMakeLists.txt
lab11/src/: knapsack.c  knapsack.h  main.c
lab2/: CMakeLists.txt
lab2/include/: check.h  error.h  inout.h  narayana.h
lab2/src/: check.c  error.c  inout.c  main.c  narayana.c
lab3-0/src/: main.c
lab3-1/src/: main.c
lab4/: CMakeLists.txt
lab4/src/: main.c
lab5/: CMakeLists.txt
lab5/src/: bitStream.c  bitStream.h  compress.c  compress.h  decompress.c  decompress.h  main.c  tree.c  tree.h
lab6-0/src/: main.c
lab6-1/: CMakeLists.txt
lab6-1/src/: RedBlackTree.c  RedBlackTree.h  main.c
lab6-2/src/: BTree.c  BTree.h  main.c
lab6-3/: CMakeLists.txt
lab6-3/src/: main.c  tree.c  tree.h  wordSearch.c  wordSearch.h
lab7/src/: main.c
lab8-0/: CMakeLists.txt
lab8-0/src/: graph.c  graph.h  main.c  subset.c  subset.h
lab8-1/: CMakeLists.txt
lab8-1/src/: main.c  prim.c  prim.h
lab9/: CMakeLists.txt
lab9/src/: graph.c  graph.h  main.c
